--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
     </application>
-
+	<!-- 读取联系人权限 -->   
+	<uses-permission android:name="android.permission.READ_CONTACTS"/>  
+	<!-- 拨打电话权限 -->  
+	<uses-permission android:name="android.permission.CALL_PHONE"/>  
 </manifest>
